--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,9 +3,9 @@
 
 :root {
   --font-primary: "Open Sans", sans-serif;
-  --background-color: #121212;
-  --cards-color: #282828;
-  --buttons-color: #3f3f3f;
+  --background-color: #282828;
+  --cards-color: #434040;
+  --buttons-color: #6d6b6b;
   --sidebar-color: #575757;
   --modal-dialogs-color: #717171;
   --text-color: #ffffff;
@@ -48,6 +48,7 @@ header {
   left: 0;
   width: 100%;
   z-index: 100;
+  opacity: 0.9;
 }
 
 .container {
@@ -122,44 +123,8 @@ nav ul li a {
 
 /* hero section */
 .hero {
-  background: var(--cards-color);
-  color: var(--primary-text-color);
-  text-align: center;
-  padding: 100px 0;
-  z-index: 20000;
-  margin-top: 2rem;
-}
-
-.hero-content {
-  max-width: 800px;
-  margin: 0 auto;
-  text-align: left;
-}
-
-.hero h1 {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-
-.hero p {
-  font-size: 18px;
-  margin-bottom: 30px;
-}
-
-.cta-button {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: var(--buttons-color);
-  border-color: var(--color-primary-400);
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
-
-.cta-button:hover {
-  background-color: var(--color-primary-100);
+  height: 100vh;
+  width: 100%;
 }
 
 /*footer section*/
@@ -259,6 +224,7 @@ footer .box-contact {
 .project-card img {
   max-width: 100%;
   height: auto;
+  max-height: 250px;
   border: 2px solid var(--primary-text-color);
   border-radius: 5px;
   transition: all 0.3s ease-in-out;
