--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,16 +65,16 @@ header .container {
   height: 6rem;
 }
 
-header .h1 {
-  font-size: 20px;
-  font-weight: 100;
-}
-
-header .a {
-  font-size: 20px;
-  font-weight: 100; 
+header a {
   text-decoration: none;
   color: var(--text-color);
+  font-weight: 300;
+  font-size: 24px;
+  transition: color 0.3s ease-in-out;
+}
+
+header a:hover {
+  color: var(--color-primary-100); /* Change the color on hover */
 }
 
 nav ul {
@@ -129,8 +129,99 @@ nav ul li a {
 /* hero section */
 .hero {
   height: 100vh;
-  width: 100%;
+  width: 100vw; 
+  overflow: hidden; 
+  background-size: cover; 
 }
+.hero-content {
+  position: relative;
+}
+
+.hero-text {
+  position: absolute;
+  top: 50%;
+  right: 10%; /* Adjust this value to control the distance from the right */
+  transform: translateY(-50%);
+  text-align: right; /* Align text to the right */
+  color: #ffffff; /* Text color */
+  border: none;
+  padding: 20px; /* Add padding to the hero-text */
+  border-radius: 5px; /* Rounded corners */
+}
+
+.hero-text h2 {
+  font-size: 2rem;
+  font-weight: 550;
+  margin-bottom: 20px;
+}
+
+.hero-text button {
+  padding: 12px 18px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  color: var(--text-color);
+  background-color: var(--buttons-color);
+  border: 2px solid var(--color-primary-100);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.hero-text button:hover {
+  background-color: var(--color-primary-100);
+}
+
+.hero-text button i {
+  margin-right: 8px;
+}
+
+.pdf-preview-section {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  padding: 60px 0;
+}
+
+.pdf-preview-section .container {
+  max-width: 968px;
+  margin: 0 auto;
+}
+
+.pdf-preview-section h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.pdf-preview {
+  width: 100%;
+  max-width: 968px;
+  margin: 0 auto;
+}
+
+.pdf-preview iframe {
+  width: 100%;
+  height: 500px;
+  border: 1px solid var(--primary-text-color);
+}
+
+.pdf-preview-section .text-container {
+  max-width: 968px;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  display: flex;
+  margin: 0 auto;
+  width: 100%;
+  height: 4rem;
+  margin-top: 2rem;
+}
+
+.pdf-preview-section .text-container h1 {
+  text-align: left;
+  font-size: 2rem;
+  font-weight: bold;
+  
+}
+
 
 .box {
 	display: flex;
@@ -241,6 +332,14 @@ footer .box-contact {
 }
 
 .box-contact .contact p {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  font-weight: 300;
+  justify-content: center;
+}
+
+.box-contact .contact a {
   display: flex;
   align-items: center;
   gap: 0.8rem;
